tests/typechecker/fail/006-if.hyg
if (true) then 1.0f else ()
